[project]
name = "object-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "blinker==1.4",
    "certifi==2024.8.30",
    "cffi==1.17.1",
    "charset-normalizer==3.3.2",
    "cmake==3.30.4",
    "contourpy==1.3.2",
    "cryptography==3.4.8",
    "cycler==0.12.1",
    "cython==0.29.37",
    "distro==1.7.0",
    "docutils==0.21.2",
    "filelock==3.16.1",
    "fonttools==4.61.1",
    "fsspec==2024.9.0",
    "httplib2==0.20.2",
    "idna==3.10",
    "importlib-metadata==4.6.4",
    "jinja2==3.1.4",
    "keyring==23.5.0",
    "kiwisolver==1.5.0",
    "mako==1.3.5",
    "markdown-it-py==3.0.0",
    "markupsafe==2.1.5",
    "matplotlib==3.10.8",
    "mdurl==0.1.2",
    "more-itertools==8.10.0",
    "mpmath==1.3.0",
    "networkx==3.3",
    "nh3==0.2.18",
    "ninja==1.11.1.1",
    "numpy==1.26.4",
    "oauthlib==3.2.0",
    "onnx==1.16.2",
    "onnx-graphsurgeon==0.5.2",
    "opencv-contrib-python==4.10.0.84",
    "opencv-python==4.9.0.80",
    "packaging==24.1",
    "pillow==10.4.0",
    "pkginfo==1.10.0",
    "platformdirs==4.3.6",
    "polars==1.38.1",
    "protobuf==5.28.2",
    "psutil==6.0.0",
    "pycparser==2.22",
    "pycuda==2024.1.2",
    "pygments==2.18.0",
    "pyjwt==2.3.0",
    "pyparsing==3.3.2",
    "pysoundfile==0.9.0.post1",
    "python-dateutil==2.9.0.post0",
    "pytools==2024.1.14",
    "pyyaml==6.0.3",
    "readme-renderer==44.0",
    "requests==2.32.3",
    "requests-toolbelt==1.0.0",
    "rfc3986==2.0.0",
    "rich==13.8.1",
    "scikit-build==0.18.1",
    "scipy==1.15.3",
    "six==1.16.0",
    "sympy==1.13.3",
    "tensorrt==10.4.0",
    "tomli==2.0.1",
    "torch==2.4.1",
    "torchaudio==2.4.1",
    "torchvision==0.19.1",
    "twine==5.1.1",
    "typing-extensions==4.12.2",
    "ultralytics==8.4.21",
    "ultralytics-thop==2.0.18",
    "urllib3==2.2.3",
    "zipp==1.0.0",
]
